2005-09-30  Fabien DUMINY  <fduminy@jnode.org>
    * for Windows users: renamed gnu/testlet/java/awt/Color to gnu/testlet/java/awt/ColorClass
    * for Windows users: renamed gnu/testlet/java/awt/Event to gnu/testlet/java/awt/EventClass
    * for Windows users: renamed gnu/testlet/java/awt/Font to gnu/testlet/java/awt/FontClass

2005-09-30  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/PlainDocument/removeJoinesLines.java:
	Fixed copyright info.
	
2005-09-30  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/PlainDocument/removeJoinesLines.java:
	New test.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/OverlayLayout/getLayoutAlignmentX.java
	* gnu/testlet/javax/swing/OverlayLayout/getLayoutAlignmentY.java
	* gnu/testlet/javax/swing/OverlayLayout/layoutContainer.java
	* gnu/testlet/javax/swing/OverlayLayout/maximumLayoutSize.java
	* gnu/testlet/javax/swing/OverlayLayout/minimumLayoutSize.java
	* gnu/testlet/javax/swing/OverlayLayout/preferredLayoutSize.java
	New tests for the OverlayLayout.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/GapContent/PositionTest.java:
	Added test for Bug #24105.

2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicIconFactory/getCheckBoxIcon.java: new test,
	* gnu/testlet/javax/swing/plaf/basic/BasicIconFactory/getMenuArrowIcon.java: new test.

2005-09-28  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/AbstractDocument/BranchElement/getElementIndexNullPointer.java: New test.

2005-09-27  Robert Schuster <robertschuster@fsfe.org>
	Suggested by: Torben.Nielsen@sagemdenmark.dk
	
	* gnu/testlet/java/io/InputStreamReader/getEncoding.java: Check names
	of extended (= optional) charset only if it is available.

2005-09-27  Anthony Balkissoon  <abalkiss@redhat.com>
